fix: emi assembly panel alignment

--- a/config/emi.css
+++ b/config/emi.css
@@ -156,7 +156,7 @@
 	/**
 	 * How many columns and rows of ingredients to limit the left sidebar to
 	 */
-	left-sidebar-size: 11, 7;
+	left-sidebar-size: 10, 8;
 
 	/**
 	 * How much space to maintain between the left sidebar and obstructions, in pixels
